<resources>
    <string name="app_name">ZYMALL</string>
    <string name="a">确定</string>
    <string name="b">京东</string>
    <string name="c">返回京东</string>
    <string name="d">请选择照片</string>
    <string name="e">您的手机没有安装SD卡，请安装SD卡后重试！</string>
    <string name="f">打开相机失败</string>
    <string name="cancel">取消</string>
    <string name="h">暂时无法打开此页面，请稍后重试</string>
    <string name="i">载入失败 点击重试</string>
    <string name="j">@string/n</string>
    <string name="k">已加载全部数据</string>
    <string name="l">更多</string>
    <string name="m">网络请求失败，请检查您的网络设置</string>
    <string name="n">@string/b9n</string>
    <string name="o">@string/b9p</string>
    <string name="p">上拉可以刷新</string>
    <string name="q">松开后刷新</string>
    <string name="r">@string/b9q</string>
    <string name="s">让购物更便捷</string>
    <string name="t">@string/b9o</string>
    <string name="u">您未安装QQ客户端，无法进行分享。</string>
    <string name="v">您未安装QQ空间客户端，无法进行分享。</string>
    <string name="w">\@京东</string>
    <string name="x">分享取消</string>
    <string name="y">分享链接不能为空</string>
    <string name="z">http://img30.360buyimg.com/mobilecms/jfs/t1042/326/466525053/10993/361de7f5/5526521fNdc6b202c.png</string>
    <string name="a0">我在京东有大发现，绝对适合你，速来围观→_→</string>
    <string name="a1">分享失败</string>
    <string name="a2">分享成功</string>
    <string name="a3">分享到:</string>
    <string name="a4">QQ好友</string>
    <string name="a5">QQ空间</string>
    <string name="a6">新浪微博</string>
    <string name="a7">微信好友</string>
    <string name="a8">微信朋友圈</string>
    <string name="a9">抱歉，您尚未安装微信。</string>
    <string name="a_">请升级微信到最新版本使用。</string>
    <string name="aa">下次再说</string>
    <string name="ab">立即安装</string>
    <string name="ac">您未安装新浪微博客户端或者版本太旧，无法进行分享。</string>
    <string name="ad">复制成功</string>
    <string name="ae">分享配置有误</string>
    <string name="af">复制链接</string>
    <string name="ag">没有更多了~</string>
    <string name="ah">看相似</string>
    <string name="ai">为你推荐</string>
    <string name="yangjiao">¥</string>
    <string name="ak">未定义分享</string>
    <string name="al">点击诊断</string>
    <string name="am">取消诊断</string>
    <string name="an">诊断取消中…</string>
    <string name="ao">重新诊断</string>
    <string name="ap">"如果您已连接网络，但网络不畅
        可以点击下方按钮诊断具体原因"</string>
    <string name="aq">网络诊断</string>
    <string name="ar">"当前网络可能屏蔽了京东客户端
        您可以更换网络后再试"</string>
    <string name="as">"当前网络环境较差，数据传输较慢
        您可以更换网络后再试"</string>
    <string name="at">"您当前接入的wi-fi网络未连接因特网或网络需要认证
        请登录认证或更换网络再试"</string>
    <string name="au">"当前网络状态不错
        您可以正常使用"</string>
    <string name="av">"诊断过程出现异常
        您可以重新诊断或稍后再试"</string>
    <string name="aw">"您当前未连接任何网络
        您可以连接网络后再试"</string>
    <string name="ax">"您当前接入的wi-fi网络可能需要认证
        请尝试登录认证后再试"</string>
    <string name="ay">网络诊断小工具</string>
    <string name="az">网络诊断中…</string>
    <string name="b0">诊断报告</string>
    <string name="b1">首页</string>
    <string name="b2">消息</string>
    <string name="b3">搜索</string>
    <string name="b4">分享</string>
    <string name="b5">Debug in Chrome</string>
    <string name="b6">Show Inspector</string>
    <string name="b7">Unable to download JS bundle. Did you forget to start the development server or connect your device?</string>
    <string name="b8">Fetching JS bundle</string>
    <string name="b9">Please wait…</string>
    <string name="b_">Reload JS</string>
    <string name="ba">Dev Settings</string>
    <string name="bb">Catalyst Dev Settings</string>
    <string name="bc">开户银行：</string>
    <string name="bd">取消</string>
    <string name="be">完成</string>
    <string name="bf">等待付款</string>
    <string name="bg">¥</string>
    <string name="bh">同意，</string>
    <string name="bi">账户与安全</string>
    <string name="bj">帐户余额</string>
    <string name="bk">设置</string>
    <string name="bl">全部活动</string>
    <string name="bm">活动详情拉取失败，请稍后再试！</string>
    <string name="bn">商品列表拉取失败，请稍后再试！</string>
    <string name="bo">置顶</string>
    <string name="bp">点赞失败，请稍后再试！</string>
    <string name="bq">你已经赞过这个活动咯！</string>
    <string name="br">列表拉取失败，请稍后再试！</string>
    <string name="bs">分类拉取失败，请稍后再试！</string>
    <string name="bt">更多精彩活动</string>
    <string name="bu">万</string>
    <string name="bv">添加轻松购</string>
    <string name="bw">继续添加</string>
    <string name="bx">添加轻松购不成功，请检查您填的信息是否正确，或者轻松购地址是否过多</string>
    <string name="by">添加轻松购成功</string>
    <string name="bz">轻松购设置</string>
    <string name="c0">啊哦，商品太抢手已经卖完了…您要不再逛逛其他商品？</string>
    <string name="c1">加入购物车操作成功</string>
    <string name="c2">加入购物车</string>
    <string name="c3">砍后价:</string>
    <string name="c4">请选择</string>
    <string name="c5">确认删除全部历史记录？</string>
    <string name="c6">"抱歉，您不能对该商品进行评价，原因是：
        1.同一订单或相隔15日内不同订单中的相同商品，只能评价一次
        2.购买时间已超过90天
        3.商品已退货成功
        4.可能没有在京东购买过该商品"</string>
    <string name="c7">为了保证您手机的正常使用，只能晒三张以内的图片</string>
    <string name="c8">您的操作系统版本太低，暂时不支持剪切板</string>
    <string name="c9">确认清空扫描记录？</string>
    <string name="c_">条码内容已经复制到剪切板</string>
    <string name="ca">内容为空！</string>
    <string name="cb">此链接无效！</string>
    <string name="cc">抱歉，此机型暂不支持通过摄像头进行条码扫描，请手动输入条码。</string>
    <string name="cd">可能存在风险，是否打开此链接？</string>
    <string name="ce">您当前的网络情况不佳，请稍后再次尝试。</string>
    <string name="cf">这位客官，网络不给力啊。请检查一下您的网络，重新加载吧！</string>
    <string name="cg">识别中...</string>
    <string name="ch">您选择的文件无效，请重新选择！</string>
    <string name="ci">清空历史</string>
    <string name="cj">网络不佳</string>
    <string name="always_finish_activities">由于您已开启\"不保留活动\"，导致京东部分功能无法正常使用。我们建议您点击左下方\"设置\"按钮，在\"开发者选项\"中关闭\"不保留活动\"功能。</string>
    <string name="cl">该商品不能被删除</string>
    <string name="cm">删除商品失败，请稍后重试</string>
    <string name="cn">暂无常购商品</string>
    <string name="co">常购推荐</string>
    <string name="cp">常购清单</string>
    <string name="cq">提交后重启</string>
    <string name="cr">关闭</string>
    <string name="cs">应用出错 ,即将关闭。</string>
    <string name="ct">提交</string>
    <string name="cu">已发送，应用已关闭...</string>
    <string name="cv">您可将联系方式（QQ、邮箱、手机）和出错情况提交给我们，以帮助改善软件质量，京东感谢您的支持与协助。</string>
    <string name="cw">请在此填写联系方式和出错情况</string>
    <string name="cx">已发送，自动重启中...请稍后</string>
    <string name="cy">发送中</string>
    <string name="cz">警告</string>
    <string name="d0">发现更多</string>
    <string name="d1">百宝箱</string>
    <string name="d2">退款联系人：</string>
    <string name="d3">姓名不超过20位</string>
    <string name="d4">联系人姓名只能由中文、英文字符或数字组成。</string>
    <string name="d5">请选择退款原因。</string>
    <string name="d6">联系方式：</string>
    <string name="d7">退款原因：</string>
    <string name="d8">已收货</string>
    <string name="d9">您是否已收货？</string>
    <string name="d_">请先选择退款原因</string>
    <string name="da">申请返修/退换货</string>
    <string name="db">申请退款</string>
    <string name="dc">未收货</string>
    <string name="dd">手机号不超过11位</string>
    <string name="de">加载失败，点击重试一次吧</string>
    <string name="df">此文章内容已不存在</string>
    <string name="dg">非法应用，请从官网重新下载京东客户端</string>
    <string name="dh">存储空间不足，部分功能可能无法正常使用，请释放足够的空间</string>
    <string name="di">-共%1$s篇-</string>
    <string name="dj">可以使用</string>
    <string name="dk">呃，活动已结束或过期~</string>
    <string name="dl">额，活动还没有开始哦~</string>
    <string name="dm">点击“返回”将中断注册，确定返回？</string>
    <string name="dn">银行账户：</string>
    <string name="bank_card_change_phone_tips">如果您更换了银行预留手机号，请先解除绑定，并在收银台付款时重新绑定</string>
    <string name="dp">银行卡详情</string>
    <string name="dq">持卡人姓名：</string>
    <string name="dr">银行预留手机号：</string>
    <string name="ds">您还未开通快捷支付！</string>
    <string name="dt">您可以在收银台支付时绑定银行卡并完成付款。</string>
    <string name="du">解除绑定</string>
    <string name="dv">您确定要解除绑定该银行卡吗？</string>
    <string name="dw">解除失败，请重试</string>
    <string name="dx">解除成功</string>
    <string name="dy">商品号:</string>
    <string name="dz">输入条码</string>
    <string name="e0">手动输入</string>
    <string name="e1">切换扫码</string>
    <string name="e2">请输入条码</string>
    <string name="e3">输入二维码/条形码</string>
    <string name="e4">暂无与此条码相关商品记录</string>
    <string name="e5">扫描条码</string>
    <string name="e6">复制内容</string>
    <string name="e7">扫描记录：</string>
    <string name="e8">暂时没有扫描记录</string>
    <string name="e9">多个商品</string>
    <string name="e_">在浏览器中打开</string>
    <string name="ea">暂无与此条码相关订单信息</string>
    <string name="eb">订单信息</string>
    <string name="ec">文本</string>
    <string name="ed">从相册找</string>
    <string name="ee">输入条码</string>
    <string name="ef">扫码登录</string>
    <string name="eg">二维码内容</string>
    <string name="eh">二维码/条形码</string>
    <string name="ei">条码内容</string>
    <string name="ej">网址</string>
    <string name="ek">选择二维码图片</string>
    <string name="el">扫一扫</string>
    <string name="em">扫码</string>
    <string name="en">请先登录再扫描加入购物车</string>
    <string name="eo">您可以通过扫描或手动输入商品条码，搜索该商品在京东的价格和详细信息。</string>
    <string name="ep">备注： %s</string>
    <string name="eq">大件商品送货时间:</string>
    <string name="er">大件商品安装时间:</string>
    <string name="es">部分商品不支持自提</string>
    <string name="et">送货</string>
    <string name="eu">"大件商品
        送货日期："</string>
    <string name="ev">大家电</string>
    <string name="ew">安装</string>
    <string name="ex">京东E卡不可购买第三方卖家，出版物类及金银投资类商品。</string>
    <string name="ey">京东E卡和京东卡不能同时使用。</string>
    <string name="ez">绑定京东卡/E卡</string>
    <string name="f0">京东卡每次最多使用49张,可与优惠券同时使用.京东卡金额大于订单应付金额时,差额可下次继续使用.</string>
    <string name="f1">京东卡不可购买金银投资类商品。</string>
    <string name="f2">京东E卡和京东卡不能同时使用。</string>
    <string name="f3">绑定</string>
    <string name="f4">是否重发？</string>
    <string name="f5">获取信息失败，请退出重试</string>
    <string name="f6">同意</string>
    <string name="f7">京东小冰用户使用协议</string>
    <string name="f8">清除聊天记录</string>
    <string name="f9">确认清除聊天记录吗</string>
    <string name="f_">意见反馈</string>
    <string name="fa">星期五</string>
    <string name="fb">获取验证码</string>
    <string name="fc">同意并领我走</string>
    <string name="fd">帮助</string>
    <string name="fe">用户ID已经绑定过小冰</string>
    <string name="ff">你真幸运哦，抢到了我的使用权限。从今天开始我们就是朋友啦！快来和我一起愉快的玩耍吧！</string>
    <string name="fg">请填写手机号</string>
    <string name="fh">输入验证码</string>
    <string name="fi">"主人，您好
        偶是出生在微软，在京东长大的小冰
        偶是人工智能机器人
        是个聪明伶俐的萌妹纸
        多跟偶聊天，偶会解锁好多技能
        还会给您推荐一些物超所值的商品哦"</string>
    <string name="fj">该手机号已经绑定过小冰</string>
    <string name="fk">用户手机号不合法</string>
    <string name="fl">星期一</string>
    <string name="fm">方法不存在</string>
    <string name="fn">业务处理错误</string>
    <string name="fo">使用其他手机号开通</string>
    <string name="fp">综合评分</string>
    <string name="fq">参数错误</string>
    <string name="fr">现在，可以使用京东绑定的手机号%s来开通小冰~</string>
    <string name="fs">请输入合法手机号</string>
    <string name="ft">请输入正确的验证码</string>
    <string name="fu">业务成功</string>
    <string name="fv">星期六</string>
    <string name="fw">我在京东抢小冰，快来帮我忙！~%1$s |下载京东手机客户端：http://3.cn/Ceo4yH @京东</string>
    <string name="fx">我在京东抢小冰，快来帮我忙！</string>
    <string name="fy">星期日</string>
    <string name="fz">星期四</string>
    <string name="g0">今天</string>
    <string name="g1">用户token非法</string>
    <string name="g2">星期二</string>
    <string name="g3">未绑定小冰</string>
    <string name="g4">用户未登录</string>
    <string name="g5">用户手机验证码错误</string>
    <string name="g6">请重新获取验证码</string>
    <string name="g7">星期三</string>
    <string name="g8">你可以用手机号来领我走。如果你已经在别的地方拥有过小冰，也可以在这里通过手机号找回。</string>
    <string name="g9">昨天</string>
    <string name="g_">品牌</string>
    <string name="ga">msg_browse_mode_category</string>
    <string name="gb">验证码更新中,请稍等...</string>
    <string name="gc">安装</string>
    <string name="gd">暂停</string>
    <string name="ge">继续</string>
    <string name="gf">添加事件至日历</string>
    <string name="gg">添加联系人</string>
    <string name="m0">颜色购</string>
    <string name="ajo">关于</string>
    <string name="ajq">退出</string>
    <string name="ajr">意见反馈</string>
    <string name="ajt">浏览记录</string>
    <string name="ajw">亮度调节</string>
    <string name="ajy">设置</string>
    <string name="bd8">扫一扫</string>
    <string name="bd9">拍照购</string>
</resources>