<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/search_barcode_btn"
        style="@style/home_color_shopping_button"
        android:layout_width="wrap_content"
        android:layout_weight="1.0"
        android:clickable="true"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="@dimen/zu"
            android:layout_height="@dimen/zt"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/app_icon_barcode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:text="@string/bd8"
            android:textColor="@color/a5"
            android:textSize="@dimen/a31"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="1.0dip"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:background="@drawable/color_shopping_gap_line" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/search_camera_btn"
            style="@style/home_color_shopping_button"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:visibility="visible">

            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="@dimen/zu"
                android:layout_height="@dimen/zt"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/app_icon_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:text="@string/bd9"
                android:textColor="@color/a5"
                android:textSize="@dimen/a31"
                android:textStyle="bold" />
        </LinearLayout>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/ih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|top"
            android:layout_marginRight="1.0dip"
            android:layout_marginTop="3.0dip"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/plug_center_color_shopping_new"
            android:visibility="gone" />
    </FrameLayout>

    <View
        android:layout_width="1.0dip"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:background="@drawable/color_shopping_gap_line" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/color_shopping_btn"
            style="@style/home_color_shopping_button"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="@dimen/zu"
                android:layout_height="@dimen/zt"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/app_color_shopping" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:text="@string/m0"
                android:textColor="@color/a5"
                android:textSize="@dimen/a31"
                android:textStyle="bold" />
        </LinearLayout>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/ij"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right|top"
            android:layout_marginRight="1.0dip"
            android:layout_marginTop="3.0dip"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/plug_center_color_shopping_new"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>